--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#4D4D4D;font-size:8px;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				<div class="keywords" style="color:#4D4D4D;font-size:8px;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<!-- <li>
+					<li>
 						<a href="index.html">Accueil</a>
-					</li> -->
+					</li>
 					<li>
 					</li>
 					<li>
@@ -222,7 +222,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center black">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
@@ -233,7 +233,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"data-nosnippet>Facebook</span></a>
+							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"data-nosnippet >Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
@@ -246,7 +246,7 @@
 							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md" data-nosnippet>Instagram</span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#4D4D4D;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4 partners">
