--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="La Chouette Agence est une entreprise de web design basée sur Lyon. 
-	Nous vous aidons à améliorer votre visibilité et votre attractivité sur internet" />
-  <!-- <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"> -->
-  <!-- <meta name="description" content="La Chouette agence Lyon est une agence de web design qui aident les entreprises à devenir attractifs et visibles sur internet"> -->
+  <meta name="description" content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet 
+	" />
   <meta name="robots" content="index,follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
