--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
               <blockquote class="darkgray">
-                "La chouette agence est une excellente agence web ! Les web
+                <p>"La chouette agence est une excellente agence web ! Les web
                 designers ont réussi à capturer l'essence de notre entreprise
                 et à l'intégrer à notre site. Cela nous a aidé à doubler nos
-                ventes en ligne à Lyon."<br />
+                ventes en ligne à Lyon."
+              </p>
                 <cite class="darkgray">Maxime Guibard, PDG de À vos fourchettes</cite>
               </blockquote>
             </div>
