--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
   <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
-  <!-- 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css"> -->
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
     integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA=="
     crossorigin="anonymous" defer></script>
@@ -30,11 +24,7 @@
   <script src="./js/blocs.js" defer></script>
   <script src="./js/jquery.touchSwipe.js" defer></script>
 
-  <!-- <script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script> -->
-  <script src="./js/gmaps.js"></script>
+  <script src="./js/gmaps.js" defer></script>
 
   <title>La Chouette Agence | Agence de Webdesign Lyonnaise</title>
 
