--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
   <title>La Chouette Agence | Agence de Webdesign Lyonnaise</title>
 
-  <meta property="og:title" content="La Chouette Agence | Agence de Web Design Lyonnaise" />
+  <meta property="og:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
   <meta property="og:description"
-    content="La chouette agence est une grande agence de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet" />
+    content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@la_chouette_agence" />
-  <meta name="twitter:title" content="La Chouette Agence | Agence de Web Design Lyonnaise" />
+  <meta name="twitter:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
   <meta property="twitter:description"
-    content="La chouette agence est une grande agence de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet" />
+    content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
 
   <!-- Analytics -->
 
@@ -65,7 +65,7 @@
                 <a href="index.html">Accueil</a>
               </li>
               <li>
-                <a href="page2.html">page2 &gt;</a>
+                <a href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
