--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 La chouette agence.
               </h1>
               <div class="text-center">
-                <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero">Contact</a>
               </div>
             </div>
@@ -265,7 +265,7 @@
               équipe !
             </h2>
             <div class="col-sm-12 text-center">
-              <a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+              <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
             </div>
           </div>
         </div>
