--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
           </div>
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
-              <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
-                data-caption="Refonte d'un site web pour un journal" data-frame="snapshot-lb"><img src="img/1.jpg"
+              <a href="#" data-lightbox="img/refonte-du-site.jpg" data-gallery-id="gallery-1"
+                data-caption="Refonte d'un site web pour un journal" data-frame="snapshot-lb"><img src="img/refonte-du-site.jpg"
                   alt="Refonte site web journal" class="img-responsive portfolio-thumb" /></a>
               <h3 class="mg-md text-center">
                 Refonte d'un site web pour un journal local
@@ -211,8 +211,8 @@
               </p>
             </div>
             <div class="col-sm-6">
-              <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
-                data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg"
+              <a href="#" data-lightbox="img/creation-de-site-pour-photographes.jpg" data-gallery-id="gallery-1"
+                data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/creation-de-site-pour-photographes.jpg"
                   class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -225,9 +225,9 @@
           </div>
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
-              <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+              <a href="#" data-lightbox="img/creation-de-site-pour-voyageurs.jpg" data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-                  src="img/3.bmp" class="img-responsive portfolio-thumb"
+                  src="img/creation-de-site-pour-voyageurs.jpg" class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour voyageur" /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -238,9 +238,9 @@
               </p>
             </div>
             <div class="col-sm-6">
-              <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+              <a href="#" data-lightbox="img/conception-de-site.jpg" data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-                  src="img/4.bmp" class="img-responsive portfolio-thumb"
+                  src="img/conception-de-site.jpg" class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour agence de mariage" /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
