--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" type="text/css" href="style.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
     integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA=="
     crossorigin="anonymous" defer></script>
@@ -23,11 +22,9 @@
     crossorigin="anonymous" defer></script>
   <script src="./js/blocs.js" defer></script>
   <script src="./js/jquery.touchSwipe.js" defer></script>
-
   <script src="./js/gmaps.js" defer></script>
 
   <title>La Chouette Agence | Agence de Webdesign Lyonnaise</title>
-
   <meta property="og:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
   <meta property="og:description"
     content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
@@ -274,7 +271,8 @@
     <!-- bloc-5-cta END -->
 
     <!-- Footer - bloc-8 -->
-    <section class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+    <footer>
+    <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
       <div class="container bloc-sm">
         <div class="row">
           <div class="col-sm-12">
@@ -310,7 +308,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </footer>
     <!-- Footer - bloc-8 END -->
   </div>
   <!-- Principal conteneur END -->
