--- a/contact.html
+++ b/contact.html
@@ -2,44 +2,36 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
 	<meta name="description" content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet 
-	" />
+		  " />
 	<meta name="robots" content="index,follow" />
-	<!-- <meta name="keywords" content="">
-    <meta name="description" content=""> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
-		integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA=="
-		crossorigin="anonymous" defer></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"
-		integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
-		crossorigin="anonymous" defer></script>
-	<script src="./js/blocs.js" defer></script>
-	<script src="./js/blocs.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/formHandler.js" defer></script>
+	<link rel="stylesheet" type="text/css" href="style.min.css" />
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
+	<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.min.js" defer></script>
+	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script src="./js/gmaps.min.js" defer></script>
 	<title>La Chouette Agence | Agence de Webdesign Lyonnaise</title>
+	<!-- Open Graph data -->
 	<meta property="og:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://chmeh80.github.io/KwasiNyabe-OptimisationDuSite/"/>
+	<meta property="og:image" content="img/la-chouette-agence-banniere.jpg"/>
 	<meta property="og:description"
 		content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
 
+	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@la_chouette_agence" />
 	<meta name="twitter:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
 	<meta property="twitter:description"
 		content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
-
-
-	<!-- Analytics -->
-
-	<!-- Analytics END -->
 
 </head>
 
@@ -101,25 +93,25 @@
 					<div class="col-sm-6">
 						<form id="form_1" novalidate="">
 							<div class="form-group">
-								<label>
+								<label for="name">
 									Nom
 								</label>
 								<input id="name" class="form-control" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="email">
 									Adresse email
 								</label>
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="input_504">
 									Comment nous avez-vous connu ?
 								</label>
 								<input class="form-control" type="email" required id="input_504" />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="message">
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 								</label><textarea id="message" class="form-control" rows="4" cols="50"
 									required></textarea>
