--- a/index.html
+++ b/index.html
@@ -8,36 +8,30 @@
   <meta name="robots" content="index,follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css"
-    integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
-    crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
-    integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA=="
-    crossorigin="anonymous" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"
-    integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
-    crossorigin="anonymous" defer></script>
-  <script src="./js/blocs.js" defer></script>
-  <script src="./js/jquery.touchSwipe.js" defer></script>
-  <script src="./js/gmaps.js" defer></script>
-
+  <script src="./js/jquery-2.1.0.min.js" defer></script>
+  <script src="./js/bootstrap.min.js" defer></script>
+  <script src="./js/blocs.min.js" defer></script>
+  <script src="./js/jquery.touchSwipe.min.js" defer></script>
+  <script src="./js/gmaps.min.js" defer></script>
   <title>La Chouette Agence | Agence de Webdesign Lyonnaise</title>
+  <!-- Open Graph data -->
   <meta property="og:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://chmeh80.github.io/KwasiNyabe-OptimisationDuSite/"/>
+  <meta property="og:image" content="img/la-chouette-agence-banniere.jpg"/>
   <meta property="og:description"
     content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
-
+  <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@la_chouette_agence" />
   <meta name="twitter:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
   <meta property="twitter:description"
     content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
 
-  <!-- Analytics -->
-
-  <!-- Analytics END -->
 </head>
 
 <body>
@@ -48,7 +42,7 @@
       <div class="container bloc-sm">
         <nav class="navbar row">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+            <a class="navbar-brand" href="index.html?src=body"><img src="img/la-chouette-agence.png"
                 alt="Logo et titre de la Chouette Agence" height="40" /></a>
             <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
               data-target=".navbar-1">
@@ -59,10 +53,10 @@
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
             <ul class="site-navigation nav navbar-nav">
               <li>
-                <a href="index.html">Accueil</a>
+                <a href="index.html?src=ul">Accueil</a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html?src=ulli">Contact</a>
               </li>
             </ul>
           </div>
@@ -142,10 +136,10 @@
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
               <blockquote class="darkgray">
                 <p>"La chouette agence est une excellente agence web ! Les web
-                designers ont réussi à capturer l'essence de notre entreprise
-                et à l'intégrer à notre site. Cela nous a aidé à doubler nos
-                ventes en ligne à Lyon."
-              </p>
+                  designers ont réussi à capturer l'essence de notre entreprise
+                  et à l'intégrer à notre site. Cela nous a aidé à doubler nos
+                  ventes en ligne à Lyon."
+                </p>
                 <cite class="darkgray">Maxime Guibard, PDG de À vos fourchettes</cite>
               </blockquote>
             </div>
@@ -197,8 +191,9 @@
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
               <a href="#" data-lightbox="img/refonte-du-site.jpg" data-gallery-id="gallery-1"
-                data-caption="Refonte d'un site web pour un journal" data-frame="snapshot-lb"><img src="img/refonte-du-site.jpg"
-                  alt="Refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+                data-caption="Refonte d'un site web pour un journal" data-frame="snapshot-lb"><img
+                  src="img/refonte-du-site.jpg" alt="Refonte site web journal"
+                  class="img-responsive portfolio-thumb" /></a>
               <h3 class="mg-md text-center">
                 Refonte d'un site web pour un journal local
               </h3>
@@ -209,8 +204,9 @@
             </div>
             <div class="col-sm-6">
               <a href="#" data-lightbox="img/creation-de-site-pour-photographes.jpg" data-gallery-id="gallery-1"
-                data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/creation-de-site-pour-photographes.jpg"
-                  class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
+                data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
+                  src="img/creation-de-site-pour-photographes.jpg" class="img-responsive portfolio-thumb"
+                  alt="Création d'un site web pour photographes" /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
               </h3>
@@ -272,44 +268,44 @@
 
     <!-- Footer - bloc-8 -->
     <footer>
-    <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-      <div class="container bloc-sm">
-        <div class="row">
-          <div class="col-sm-12">
-            <p class="text-center white">
-              La chouette agence - Agence web basée à Lyon.<br />
-            </p>
-            <div class="row row-no-gutters social">
-              <div class="col-sm-3">
-                <div class="text-center">
-                  <a class="social" href="https://twitter.com" title="lien twitter" aria-label="lien twitter"><span
-                      class="fa fa-twitter icon-md"></span></a>
+      <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <div class="container bloc-sm">
+          <div class="row">
+            <div class="col-sm-12">
+              <p class="text-center white">
+                La chouette agence - Agence web basée à Lyon.<br />
+              </p>
+              <div class="row row-no-gutters social">
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social" href="https://twitter.com" title="lien twitter" aria-label="lien twitter"><span
+                        class="fa fa-twitter icon-md"></span></a>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-3">
-                <div class="text-center">
-                  <a class="social" href="https://www.facebook.com" title="lien facebook"
-                    aria-label="lien facebook"><span class="fa fa-facebook icon-md"></span></a>
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social" href="https://www.facebook.com" title="lien facebook"
+                      aria-label="lien facebook"><span class="fa fa-facebook icon-md"></span></a>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-3">
-                <div class="text-center">
-                  <a class="social" href="https://dribbble.com" title="lien dribbble" aria-label="lien dribbble"><span
-                      class="fa fa-dribbble icon-md"></span></a>
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social" href="https://dribbble.com" title="lien dribbble" aria-label="lien dribbble"><span
+                        class="fa fa-dribbble icon-md"></span></a>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-3">
-                <div class="text-center">
-                  <a class="social" href="https://www.instagram.com" title="lien instagram"
-                    aria-label="lien instagram"><span class="fa fa-instagram icon-md"></span></a>
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social" href="https://www.instagram.com" title="lien instagram"
+                      aria-label="lien instagram"><span class="fa fa-instagram icon-md"></span></a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
     <!-- Footer - bloc-8 END -->
   </div>
   <!-- Principal conteneur END -->
