Vérification générale du site

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <title>La Chouette Agence | Agence de Webdesign Lyonnaise</title>
   <!-- Open Graph data -->
   <meta property="og:title" content="La Chouette Agence | Agence de Webdesign Lyonnaise" />
-  <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://chmeh80.github.io/KwasiNyabe-OptimisationDuSite/"/>
-  <meta property="og:image" content="img/la-chouette-agence-banniere.jpg"/>
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chmeh80.github.io/KwasiNyabe-OptimisationDuSite/" />
+  <meta property="og:image" content="img/la-chouette-agence-banniere.jpg" />
   <meta property="og:description"
     content="La Chouette Agence est une agence spécilaisée en webdesign basée sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet" />
   <!-- Twitter Card data -->
@@ -169,7 +169,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br />
+                <br /><br /><a class="ltc-white bold-link" href="contact.html?section3">Contactez notre équipe</a><br />
               </p>
             </div>
           </div>
@@ -258,7 +258,7 @@
               équipe !
             </h2>
             <div class="col-sm-12 text-center">
-              <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+              <a href="contact.html?section5" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
             </div>
           </div>
         </div>
